--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,8 +185,33 @@ img {
     max-width: 100%;
 }
 
+.hamburger {
+    display: none;
+    appearance: none;
+}
 
 @media(max-width: 700px) {
+    nav {
+        display: none;
+        flex-direction: column;
+        font-size: 18px;
+        padding-bottom: 3em;
+    }
+    .hamburger:checked ~ nav {
+        display: flex;
+    }
+    .hamburger {
+        display: block;
+        position: absolute;
+        background-color: var(--dark-text-color);
+        -webkit-mask-image: url('/hamburger.svg');
+        mask-image: url('/hamburger.svg');
+        top: 2em;
+        right: 2em;
+        width: 3em;
+        height: 3em;
+        cursor: pointer;
+    }
     body {
         font-size: 14px;
     }
