--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,6 @@
 
 <header>
+  <input type="checkbox" class="hamburger">
   <nav>
     {{- range .Site.Menus.main }}
     <a href="{{ .URL }}">{{ .Name }}</a>
