--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,13 +58,17 @@ body {
 }
 
 p {
-    margin-top: 1.5em;
+    margin-top: 0;
     margin-bottom: 1.5em;
 }
 
 h2 {
     margin-top: 1em;
     margin-bottom: .2em;
+}
+
+h1 {
+    margin-bottom: 1em;
 }
 
 h1,
