--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,10 @@
 {{ define "main" }}
 <div class="center">
+	<h2 class="center">NEWS: Smart Asset Monitoring Through Sound</h2>
+	<p>We're presenting our Edge Audio Analytics product at TechDays in München and at Hub.Berlin</p>
+	<p><a href="https://audioanalytics.de">Read more at AudioAnalytics.de</a></p>
+</div>
+<div class="center">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="logo">
     <path d="m 64 20 -25.5 51 -19 0 25.5 -51 z" class="xal-color-1" />
     <path d="m 65.5 23 15 30 -9.5 19 -15 -30 z" class="xal-color-2" />
