--- a/expertanalytics/themes/piko/layouts/partials/footer.html
+++ b/expertanalytics/themes/piko/layouts/partials/footer.html
@@ -5,11 +5,11 @@
     {{- else }}
     <span>&copy; {{ now.Format "2006"}} <a href="{{ "" | absLangURL }}">{{ .Site.Title }}</a></span>
     {{- end }}
-    <div>
+    <!-- <div>
         <a href="{{ "/legal/privacy" | absLangURL }}">Privacy Policy</a> 
         <span>&</span>
         <a href="{{ "/legal/terms-and-conditions" | absLangURL }}">Terms and Conditions</a>
-    </div>
+    </div> -->
 </footer>
 {{- end }}
 
